updated all templates

--- a/templates/add_song_to_playlist.html
+++ b/templates/add_song_to_playlist.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+{% block title %}Add Song To {{ playlist.name }}{% endblock %}
 {% block content %}
 
 <h1>Add a song to {{ playlist.name }}</h1>
