--- a/templates/new_playlist.html
+++ b/templates/new_playlist.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Add New Playlist{% endblock %}
+
 {% block content %}
 
 <h1 class="display-3">Submit a new playlist!</h1>
