--- a/templates/new_song.html
+++ b/templates/new_song.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Add New Song{% endblock %}
+
 {% block content %}
 
 <h1>Add a song to our library!</h1>
