--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}{{ playlist.name }} Details{% endblock %}
+
 {% block content %}
 
 <div class="jumbotron">
